<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg1"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>


    <TextView
        android:id="@+id/newsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_label"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/newsDetail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/newsDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/more"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/infoTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_label"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/infoDetail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/infoDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/more"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/courseTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/course_label"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/courseDetail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/courseDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/switch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/more"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/stateTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/state_label"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/stateDetail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/stateDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="TextView"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/switch4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/more"
        android:textSize="18sp" />


</LinearLayout>